2005-09-15  Timo Schulz  <ts@g10code.com>

	* util.h: Provider watcher prototypes.
	* watcher.cpp (watcher_init_hook): New.
	(watcher_free_hook): New.
	(watcher_set_callback_ctx): New.
	(cbt_proc): New.
	* display.cpp (find_message_window): Removed GpgMsg param.
	Changed all callers.
	
2005-09-15  Werner Koch  <wk@g10code.com>

	* olflange.cpp (OnWriteComplete): Take care of EEME_FAILED.
	(OnWrite): Check that we are encrypting only plain text messages.

	* myexchext.h: Add flags used by OnReadComplete.

2005-09-14  Werner Koch  <wk@g10code.com>

	* gpgmsg.cpp (writeAttestation): Add a content type.
	(gatherAttachmentInfo): Detect whether we already have an attestation.
	(decrypt): Don't create duplicate attestations.
	(writeAttestation): Translate LF to CRLF.

2005-09-13  Werner Koch  <wk@g10code.com>

	* pgpmime.c (pgpmime_decrypt): New arg ATTESTATION.
	* engine-gpgme.c (add_verify_attestation): New.
	(op_decrypt, op_verify_detached_sig, op_verify_detached_sig)
	(op_verify_detached_sig): Add new arg ATTESTATION.  Changed all
	callers.
	(at_sig_summary, at_sig_validity, add_verify_attestation): New.
	The code has been taken and modified from Mutt's crypt-gpgme.c and
	entirely been writen by g10 Code.
	(at_fingerprint): Ditto.

	* gpgmsg.cpp (class GpgMsgImpl): New member ATTESTATION.  Use it
	in all calls to the functions above.

	* gpgmsg.cpp (decryptAttachment, decrypt): Save plaintext back
	into the MAPI if desired.

g2004-09-08  Timo Schulz  <ts@g10code.com>

	* passphrase-dialog.c (lod_recipbox): Use gpgme directly
	to resolve the keyids to userids.
	* usermap.c, usermap.h: Removed.
	* HashTable.cpp, HashTable.h: Removed.

2005-09-07  Timo Schulz  <ts@g10code.com>

	* common.c: Removed unused code.
	* intern.h: Likewise.

2005-09-07  Timo Schulz  <ts@g10code.com>

	* olflange.cpp (ul_release): New. Wrapper with error checking
	around UlRelease.
	(InstallCommands): Separate test for type and if string is empty.
	
2005-09-06  Werner Koch  <wk@g10code.com>
