@@ -19,6 +19,8 @@
  * 02110-1301, USA.
  */
 
+#include <config.h>
+
 #include <windows.h>
 #include <stdio.h>
 #include <gpgme.h>
